2004-10-25  Andras Varga
	
	* updated for fullPath() signature change (see include/ChangeLog)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-06   Andras Varga

	* speedmtr.cc/h: fix: use wall clock time (ftime() call) instead of 
	time consumed by the process (clock()) for the ev/sec, simsec/sec 
	calculations. 

2004-07-05   Andras Varga

	* cenvir.cc,omnetapp.cc/h,filemgrs.cc/h: recordScalar() functions for
	text and cStatistic data removed. (See also include/ChangeLog)

2004-06-22   Andras Varga

	* cenvir.cc, omnetapp.cc/h: added new cEnvir method getXMLDocument().
	* added cxmldoccache.cc/h: contains cXMLDocCache class which reads and
	caches XML config files

2004-06-21   Andras Varga

	* patmatch.cc/h: replaced old transform_pattern() and stringmatch()
	methods with shiny new pattern matching class. cPatternMatcher can do 
	case sensitive/insensitive, full string/substring match, and supports
	more pattern features, namely: numeric ranges and distinction between
	"*" and "**". See class documentation for more info

	* inifile.cc/h: cPatternMatcher used as the engine for wildcard 
	resolution in ini files. The default mode is "dottedpath on",
	where "*" does NOT match dot ".", so oddities like "foo[*].param" 
	matching "foo[1].bar[5].param" will not occur any more. The new 
	wildcard "**" will match anything. 
	   This change is (of course) NOT backward compatible, so existing 
	omnetpp.ini's have to be updated. In practice, every line which begins 
	with "*." should be changed to begin with "**." -- that'll do most
	of the time, further tweaking is rarely necessary.
	   In any case: if you still want to run the old omnetpp.ini (e.g. to
	check the new one against it), you can add the line 
	         #% old-wildcards
	at the top of (each) old ini file. This will switch back to the old