@@ -1,3 +1,8 @@
+2004-10-27  Andras Varga
+
+	* omnetapp.h/cc, cenvir.cc: added numRNGs(), rng(k) functions (see 
+	include/ChangeLog)
+
 2004-10-25  Andras Varga
 	
 	* updated for fullPath() signature change (see include/ChangeLog)
